--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/* Prevent horizontal scroll */
+html, body {
+    overflow-x: hidden;
+    width: 100%;
+}
+
 /* General Styles */
 body {
     font-family: 'Poppins', sans-serif;
