--- a/css/style.css
+++ b/css/style.css
@@ -94,11 +94,11 @@ nav ul li a:hover {
 
 /* Banner */
 .banner img {
-    width: 88%;
-    height: 1000px;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
     object-fit: cover;
     border-radius: 12px;
-    box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.3);
 }
 
 /* Popular Dishes */
