--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ header {
 }
 
 .logo { 
-    max-width: 1200px;  /* Adjusted size */
+    max-width: auto;  /* Adjusted size */
     height: auto;
     margin-bottom: 0px;
 }
