--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,7 @@ header {
 }
 
 .logo { 
-    max-width: auto;  /* Adjusted size */
-    height: auto;
+    max-width: 1200px;  /* Adjusted size */
     margin-bottom: 0px;
 }
 
