--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ header {
     color: white;
     padding: 0px;
     text-align: center;
-    border-bottom: 5px solid #ffccbc;
+    border-bottom: 0px;
 }
 
 .logo { 
